c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/unused_label.c
#ifdef SUPPRESS_WARNINGS
#pragma GCC diagnostic ignored "-Wunused-label"
#endif

int main(void) {
unused:
    return 0;
}